gdcfun.js created

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 
 [<a href="https://github.com/mathbiol/gdcfun" target="_blank" style="background-color:yellow">source code</a>]
+<script src="gdcfun.js"></script>
